Se ha agregado avance en funcionalidades

--- a/EvolutionGym/EvolutionGym.csproj
+++ b/EvolutionGym/EvolutionGym.csproj
@@ -24,6 +24,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="View\Users\Users_Edit.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
